--- a/SaitynasLab/appsettings.json
+++ b/SaitynasLab/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "ValidIssuer": "Pikas",
+    "ValidAudience": "TrustedClient",
+    "Secret":  "testestestesteseestesetsetsetset123123123"
+  }
 }
