--- a/SaitynasLab/appsettings.json
+++ b/SaitynasLab/appsettings.json
@@ -10,6 +10,10 @@
   "JWT": {
     "ValidIssuer": "Pikas",
     "ValidAudience": "TrustedClient",
-    "Secret":  "testestestesteseestesetsetsetset123123123"
+    "Secret": "testestestesteseestesetsetsetset123123123"
+  },
+  "ConnectionStrings": {
+    "Online": "Data Source=tcp:saitynaslabdbserver.database.windows.net,1433;Initial Catalog=SaitynasLab_db;User Id=paukul@saitynaslabdbserver;Password=Saitynas123",
+    "Local": "Data Source=(localdb)\\MSSQLLocalDB; Initial Catalog=LocalDB;"
   }
 }
