--- a/SaitynasLab/SaitynasLab.csproj
+++ b/SaitynasLab/SaitynasLab.csproj
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>cd1fc78f-266e-4907-94b2-4b4b4034ad44</UserSecretsId>
+    <ApplicationIcon />
+    <OutputType>WinExe</OutputType>
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
